Fixed bug #39979 (PGSQL_CONNECT_FORCE_NEW will causes next connect to establish a new connection).